Uppdatering av Ekonomi fragment
delade upp ekonomifragment lite mer så det ser bättre ut, gjorde en grid
view så det är samma avstånd mellan text och siffror.

--- a/MenuFragment/app/src/main/res/layout/ekonomi_fragment.xml
+++ b/MenuFragment/app/src/main/res/layout/ekonomi_fragment.xml
@@ -19,24 +19,49 @@
             android:layout_height="wrap_content">
 
             <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textSize="20sp"
-            android:text="Måndens ekonomi"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textSize="20sp"
+                android:text="Måndens ekonomi"/>
 
-            <TextView
+            <GridLayout
+                android:columnCount="2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Inkomst:              50.000 kr"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Utgifter:               -38.000"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Sammanlagt:       12.000"/>
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Inkomst: "/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="50.000 kr"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Utgifter: "/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="-38.000 kr"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Sammanlagt: "/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="12.000 kr"/>
+
+            </GridLayout>
+
 
             <TextView
                 android:layout_width="wrap_content"
@@ -45,25 +70,42 @@
                 android:textSize="20sp"
                 android:text="Årets ekonomi"/>
 
-            <TextView
+            <GridLayout
+                android:columnCount="2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Inkomst:              102.000 kr"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Utgifter:               79.000"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Sammanlagt:       23.000"/>
+                android:layout_height="wrap_content">
 
-        </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Inkomst: "/>
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="102.000 kr"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Utgifter: "/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="-79.000 kr"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Sammanlagt: "/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="23.000 kr"/>
+
+            </GridLayout>
 
             <TextView
                 android:layout_width="match_parent"
@@ -72,28 +114,51 @@
                 android:textSize="20sp"
                 android:text="Senaste händelser"/>
 
-            <TextView
+            <GridLayout
+                android:columnCount="2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Inköp trä        -200"/>
+                android:layout_height="wrap_content">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Inköp trä: "/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Inköp av skruv        -800"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="-200 kr"/>
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Inköp av skruv: "/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="hyra        -8.000"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="-800 kr"/>
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="hyra: "/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Reparation        1500"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="-8.000 kr"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Reparation: "/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="1500 kr"/>
+            </GridLayout>
 
         </LinearLayout>
 
