--- a/MenuFragment/app/src/main/res/layout/schema_fragment.xml
+++ b/MenuFragment/app/src/main/res/layout/schema_fragment.xml
@@ -69,7 +69,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
-                android:text="Torsdag"/>
+                android:text="Fredag"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
