--- a/MenuFragment/app/src/main/res/layout/annons_fragment.xml
+++ b/MenuFragment/app/src/main/res/layout/annons_fragment.xml
@@ -23,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Titel för din gitar"
+                android:text="Titel för din gitarr"
                 android:layout_gravity="center|top"/>
 
             <ImageView
@@ -55,7 +55,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:gravity="center"
-                android:text="Titel för din gitar"
+                android:text="Vältartestr"
                 android:layout_gravity="center|top"/>
 
             <ImageView
