--- a/MenuFragment/app/src/main/res/layout/annons_fragment.xml
+++ b/MenuFragment/app/src/main/res/layout/annons_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -34,7 +34,7 @@
                 android:layout_marginTop="@dimen/activity_horizontal_margin"/>
 
             <TextView
-                android:id="@+id/annons_beskrivning_1"
+                android:id="@+id/annons_beskrivning_8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Beskrivning av din gitar"
@@ -64,6 +64,27 @@
                 android:layout_height="match_parent"
                 android:src="@drawable/guitar1"
                 android:layout_marginTop="@dimen/activity_horizontal_margin"/>
+            <TextView
+                android:id="@+id/annons_beskrivning_1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Beskrivning av din gitar"
+                android:gravity="center"
+                />
+            <TextView
+                android:id="@+id/annons_titel_9"
+                android:textSize="20sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Titel för din gitar"
+                android:layout_gravity="center|top"/>
+            <ImageView
+                android:id="@+id/annons_image_7"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/guitar1"
+                android:layout_marginTop="@dimen/activity_horizontal_margin"/>
 
             <TextView
                 android:id="@+id/annons_beskrivning_2"
@@ -82,7 +103,7 @@
             android:id="@+id/annons_layout_3">
 
             <TextView
-                android:id="@+id/annons_titel_3"
+                android:id="@+id/annons_titel_10"
                 android:textSize="20sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -91,26 +112,49 @@
                 android:layout_gravity="center|top"/>
 
             <ImageView
-                android:id="@+id/annons_image_3"
+                android:id="@+id/annons_image_99"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/guitar3"
                 android:layout_marginTop="@dimen/activity_horizontal_margin"/>
-
             <TextView
-                android:id="@+id/annons_beskrivning_3"
+                android:id="@+id/annons_beskrivning_6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Beskrivning av din gitar"
+                android:gravity="center"
+                />
+            <TextView
+                android:id="@+id/annons_titel_11"
+                android:textSize="20sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Titel för din gitar"
+                android:layout_gravity="center|top"/>
+
+            <ImageView
+                android:id="@+id/annons_image_44"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/guitar3"
+                android:layout_marginTop="@dimen/activity_horizontal_margin"/>
+            <TextView
+                android:id="@+id/annons_beskrivning_32"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Beskrivning av din gitar"
                 android:gravity="center"
                 />
         </LinearLayout>
-    </LinearLayout>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_alignParentBottom="true"
-        android:text="Skapa ny"/>
 
-</RelativeLayout>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_alignParentBottom="true"
+            android:text="Skapa ny"/>
+    </LinearLayout>
+
+
+</ScrollView>
