--- a/MenuFragment/app/src/main/res/layout/ekonomi_fragment.xml
+++ b/MenuFragment/app/src/main/res/layout/ekonomi_fragment.xml
@@ -175,7 +175,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Ny inkommst"/>
+            android:text="Ny inkommst"
+            android:onClick="nyInkommst"/>
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
