fixat knappen inne på ekonomin
ny inkomst sida

--- a/MenuFragment/app/src/main/res/layout/ekonomi_fragment.xml
+++ b/MenuFragment/app/src/main/res/layout/ekonomi_fragment.xml
@@ -175,8 +175,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
+            android:id="@+id/nyinkomst"
+            android:layout_alignParentBottom="true"
             android:text="Ny inkommst"
-            android:onClick="nyInkommst"/>
+            />
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
