--- a/MenuFragment/app/src/main/res/layout/fragment_ny_inkomst.xml
+++ b/MenuFragment/app/src/main/res/layout/fragment_ny_inkomst.xml
@@ -1,8 +1,15 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.magnus.menufragment.nyInkomst">
+    android:theme="@style/ThemeOverlay.AppCompat.Dark"
+    android:background="#40404f"
+
+    android:layout_alignParentTop="true"
+    android:id="@+id/linearLayout"
+    android:orientation="vertical"
+    android:weightSum="1">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
@@ -10,4 +17,7 @@
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
 
-</FrameLayout>
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+</RelativeLayout>
