--- a/MenuFragment/app/src/main/res/layout/ekonomi_fragment.xml
+++ b/MenuFragment/app/src/main/res/layout/ekonomi_fragment.xml
@@ -177,7 +177,7 @@
             android:gravity="center"
             android:id="@+id/nyinkomst"
             android:layout_alignParentBottom="true"
-            android:text="Ny inkommst"
+            android:text="Ny inkomst"
             />
         <Button
             android:layout_width="match_parent"
