--- a/MenuFragment/app/src/main/res/layout/annons_formular_fragment.xml
+++ b/MenuFragment/app/src/main/res/layout/annons_formular_fragment.xml
@@ -70,6 +70,11 @@
         android:layout_alignTop="@+id/kamerasymbol"
         android:layout_toStartOf="@+id/klar" />
 
+    <ImageView
+        android:id="@+id/image_camera"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
