ändrad parsing class
Ändrat xml parsings klassen

--- a/MenuFragment/app/src/main/res/layout/ekonomi_fragment.xml
+++ b/MenuFragment/app/src/main/res/layout/ekonomi_fragment.xml
@@ -190,5 +190,11 @@
             android:id="@+id/Ekonomi_Button_Ny_Utgift"
             android:text="Ny utgift"/>
 
+        <ListView
+            android:id="@+id/list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
     </LinearLayout>
+
 </RelativeLayout>
