--- a/MenuFragment/app/src/main/res/layout/annons_formular_fragment.xml
+++ b/MenuFragment/app/src/main/res/layout/annons_formular_fragment.xml
@@ -72,8 +72,12 @@
 
     <ImageView
         android:id="@+id/image_camera"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_below="@+id/editTextBeskrivning"
+        android:layout_alignEnd="@+id/väljBild"
+        android:layout_above="@+id/väljBild"
+        android:layout_alignStart="@+id/taKort" />
 
     <Button
         android:layout_width="wrap_content"
