--- a/MenuFragment/app/src/main/res/layout/ekonomi_fragment.xml
+++ b/MenuFragment/app/src/main/res/layout/ekonomi_fragment.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
     tools:context="com.example.magnus.menufragment.MainActivity">
-
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -170,7 +172,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentBottom="false"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -196,5 +198,5 @@
             android:layout_height="match_parent" />
 -->
     </LinearLayout>
-
 </RelativeLayout>
+</ScrollView>
